# BareMetalMCU2

./: README.md
HSE_clock/App/HSE_Clock/: CMakeLists.txt  HSE.c  HSE.h
HSI_CLOCK/App/HSI_App/: CMakeLists.txt  HSI.c  HSI.h
HSI_PLL/App/: CMakeLists.txt
HSI_PLL/App/HSI_PLL/: CMakeLists.txt  HSI_PLL.c  HSI_PLL.h
Sensor_Cons/: .clangd  .gitignore  .gitmodules  CMakeLists.txt  STM32F429XX_FLASH.ld  build.ninja  cmake_install.cmake  compile_commands.json
Sensor_Cons/.cache/clangd/index/: FreeRTOS.h.8FCAB6C44C25DC38.idx  FreeRTOSConfig.h.53A4C19FCF6E77D7.idx  Global.h.E944EFDA63E8EC7D.idx  SEGGER.h.C7B7C05B67B5984C.idx  SEGGER_RTT.h.25282858E64DC5F0.idx  SEGGER_RTT_Conf.h.4EB08A6F9ECCD2FD.idx  SEGGER_SYSVIEW.h.28A7C505CCE8F48E.idx  SEGGER_SYSVIEW_Conf.h.AA57AB2D7440BB2C.idx  SEGGER_SYSVIEW_ConfDefaults.h.612A6BD22FA13FE6.idx  button.h.D53E5DF835188FB7.idx  cmsis_os2.c.4E1ADB2123F52C74.idx  crc.c.13266C7623E5C5EE.idx  crc.h.07674FC60B14F82C.idx  (+148 more)
Sensor_Cons/.github/workflows/: build.yml
Sensor_Cons/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h
Sensor_Cons/Core/Src/: freertos.c  main.c  noOS.txt  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  syscalls.c  system_stm32f4xx.c
Sensor_Cons/Peripherals/ACCEL/: README.md  accel.c  accel.h  accel_constants.h  accel_tutorial.ipynb
Sensor_Cons/Peripherals/ADC/: README.md  adc.c  adc.h  adc_tutorial.ipynb
Sensor_Cons/Peripherals/AUDIO/: AUDIO_tutorial.ipynb  README.md  audio.c  audio.h
Sensor_Cons/Peripherals/BUTTON/: BUTTON_tutorial.ipynb  README.md  README_SIMPLE.md  button.c  button.h
Sensor_Cons/Peripherals/BUZZER/: BUZZER_tutorial.ipynb  README_SIMPLE.md  buzzer.c  buzzer.h
Sensor_Cons/Peripherals/CAMERA/: ov7670.c  ov7670.h
Sensor_Cons/Peripherals/CAN/: CAN_tutorial.ipynb  README.md  can.c  can.h
Sensor_Cons/Peripherals/CRC/: CRC_tutorial.ipynb  README.md  crc.c  crc.h
Sensor_Cons/Peripherals/DAC/: DAC_tutorial.ipynb  dac.c  dac.h
Sensor_Cons/Peripherals/DHT/: README_SIMPLE.md  dht.c  dht.h
Sensor_Cons/Peripherals/DMA/: DMA_tutorial.ipynb  README.md  dma.c  dma.h
Sensor_Cons/Peripherals/DMA2D/: DMA2D_tutorial.ipynb  README.md  dma2d.c  dma2d.h
Sensor_Cons/Peripherals/EEPROM/: README.md  eeprom.c  eeprom.h
Sensor_Cons/Peripherals/ETH/: ETH_tutorial.ipynb  README.md  eth.c  eth.h
Sensor_Cons/Peripherals/FLASH/: FLASH_tutorial.ipynb  README.md  flash.c  flash.h
Sensor_Cons/Peripherals/FMC/: FMC_tutorial.ipynb  README_updated.md  fmc.c  fmc.h
Sensor_Cons/Peripherals/GPIO/: GPIO_tutorial.ipynb  README.md  gpio.c  gpio.h
Sensor_Cons/Peripherals/I2C/: README.md  i2c.c  i2c.h
Sensor_Cons/Peripherals/ILI9341/: ILI9341_tutorial.ipynb  README.md  ili9341.c  ili9341.h  ili9341_board.c
Sensor_Cons/Peripherals/ILI9488/: ILI9488_tutorial.ipynb  README.md  ili9488.c  ili9488.h  ili9488_board.c
Sensor_Cons/Peripherals/IR/: IR_tutorial.ipynb  README.md  ir.c  ir.h
Sensor_Cons/Peripherals/IR_DISTANCE/: README.md  ir_distance.c  ir_distance.h
Sensor_Cons/Peripherals/IWDG/: README.md  iwdg.c  iwdg.h
Sensor_Cons/Peripherals/KEYPAD/: README.md  keypad.c  keypad.h
Sensor_Cons/Peripherals/LASER_DISTANCE/: README.md  laser_distance.c  laser_distance.h
Sensor_Cons/Peripherals/LCD/: README.md  lcd.c  lcd.h
Sensor_Cons/Peripherals/LED/: README.md  README_LED_SIMPLE.md  led.c  led.h
Sensor_Cons/Peripherals/LOG/: log.c  log.h
Sensor_Cons/Peripherals/LOW_POWER/: app_low_power.c  app_low_power.h
Sensor_Cons/Peripherals/LTDC/: README.md  ltdc.c  ltdc.h
Sensor_Cons/Peripherals/LVGL/: README.md  lv_conf.h  lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h  lvgl_app.c  lvgl_app.h
Sensor_Cons/Peripherals/MEMS/: README.md  mems.c  mems.h
Sensor_Cons/Peripherals/MIC/: README.md  mic.c  mic.h
Sensor_Cons/Peripherals/NOKIA5110/: README.md  nokia5110.c  nokia5110.h
Sensor_Cons/Peripherals/PWR/: PWR_tutorial.ipynb  README.md  pwr.c  pwr.h
Sensor_Cons/Peripherals/QSPI/: README.md  qspi.c  qspi.h
Sensor_Cons/Peripherals/RELAY/: relay.c  relay.h
Sensor_Cons/Peripherals/RNG/: README.md  rng.c  rng.h
Sensor_Cons/Peripherals/RTC/: README.md  rtc.c  rtc.h
Sensor_Cons/Peripherals/SERVO/: README.md  SERVO_tutorial.ipynb  servo.c  servo.h
Sensor_Cons/Peripherals/SEVEN_SEGMENT/: README.md  seven_segment.c  seven_segment.h
Sensor_Cons/Peripherals/SPI/: README.md  spi.c  spi.h
Sensor_Cons/Peripherals/SSD1306/: ssd1306.c  ssd1306.h
Sensor_Cons/Peripherals/STEPPER/: README.md  STEPPER_tutorial.ipynb  stepper.c  stepper.h
Sensor_Cons/Peripherals/SYS/: sys.c
Sensor_Cons/Peripherals/TIM/: README.md  tim.c  tim.h
Sensor_Cons/Peripherals/TOUCHSCREEN/: README.md  touchscreen.c  touchscreen.h
Sensor_Cons/Peripherals/UART/: README.md  uart.c  uart.h  uart_blocking.c  uart_blocking.h  uart_config.h  uart_dma.c  uart_dma.h  uart_interrupt.c  uart_interrupt.h
Sensor_Cons/Peripherals/ULTRASONIC/: README.md  ultrasonic.c  ultrasonic.h
Sensor_Cons/Peripherals/USB/: README.md  usb.c  usb.h
Sensor_Cons/Peripherals/WWDG/: README.md  wwdg.c  wwdg.h
Sensor_Cons/Peripherals/XPT2046/: README.md  XPT2046_tutorial.ipynb  xpt2046.c  xpt2046.h  xpt2046_board.c
Sensor_Cons/USB_HOST/App/: usb_host.c
Sensor_Cons/cmake/: README.md  apds9960-fetch.cmake  bmp280-fetch.cmake  can-fetch.cmake  cjson-fetch.cmake  cli-fetch.cmake  cmock-fetch.cmake  crc-fetch.cmake  eeprom-fetch.cmake  example_integration.cmake  fatfs-fetch.cmake  hts221-fetch.cmake  ili9341-fetch.cmake  ili9488-fetch.cmake  lis3mdl-fetch.cmake  littlefs-fetch.cmake  littlefs-local.cmake  logging-fetch.cmake  lps22hb-fetch.cmake  lsm6dsl-fetch.cmake  lvgl-fetch.cmake  lvgl-local.cmake  minini-fetch.cmake  printf-fetch.cmake  rs_comm-fetch.cmake  rtc-fetch.cmake  servo-fetch.cmake  ssd1306-fetch.cmake  st7735-fetch.cmake  st7789-fetch.cmake  stepper-fetch.cmake  stmpe-fetch.cmake  u8g2-fetch.cmake  unity-fetch.cmake  vl53l1x-fetch.cmake  xpt2046-fetch.cmake
Sensor_Cons/cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
Sensor_Cons/docs/: Doxyfile
Sensor_Cons/documentation/: debugger-setup.md
(+44 files in other folders)
